--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 7px;
+  align-items: center;
 }
 
 .profile-image {
@@ -45,4 +48,15 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 0px 15px;
+  gap: 15px;
+}
+
+.right-side {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  gap: 15px;
 }
