--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -12,6 +12,29 @@ img {
   font-weight: 900;
 }
 
+.vertical,
+.elements {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.horizontal {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  margin: 30px 0px;
+}
+
+.elements {
+  flex-basis: 200px;
+}
+
+.text {
+  text-align: center;
+}
+
+
 /* do not edit this footer */
 .footer {
   position: fixed;
